--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -91,7 +91,7 @@
             %br
             Praesent faucibus a mauris att Maecenas ac enim id turpis
 
-        .content
+        .content.contact
           %h3 
             contact
           %p 
@@ -108,17 +108,17 @@
             recente tweets
           .twitter
             %p 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. In ac purus neque. 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam.
             .avatar
               =image_tag("twitter_ava.png")
           .twitter
             %p 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. In ac purus neque. 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. 
             .avatar
               =image_tag("twitter_ava.png")
           .twitter
             %p 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam. In ac purus neque. 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac eros eget mauris blandit aliquam.
             .avatar
               =image_tag("twitter_ava.png")
       
