--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -68,6 +68,7 @@ body,html
   min-height: 100%
   margin: 0 auto -402px
   display: inline-block
+  width: 100%
 // ====== //
 // Header // 
 // ====== //
