small windows fixes on footer

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1380,7 +1380,6 @@ div, input, textarea
   #content
     padding: 20px 20px 20px 20px
     background-color: $white
-    min-height: 100%
     float: left
     width: 100%
   a
@@ -1530,6 +1529,7 @@ div, input, textarea
   background-color: #362f2d
   padding: 20px 5% 0 5%
   color: #acacac
+  position: relative
   .content
     float: left
     width: 35%
@@ -1570,4 +1570,6 @@ div, input, textarea
   margin-top: 3px
   margin-left: -6%
   width: 112%
+  position: absolute
+  bottom: 0
 
