--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -2,7 +2,7 @@
 
 	<%= @picture.title  %>
 	<%= @picture.description %>
-	<%= @picture.user_name %>
+	<%= @picture.user.name %>
 	<%= image_tag(@picture.image_url, :width => 200) if @picture.image.present? %>
 	<% if signed_in? %>
 		<% if current_user == @picture.user || current_user.administrator? %>
