--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,13 +1,19 @@
+<div id="content">
 <p id="notice"><%= notice %></p>
-
-	<%= @picture.title  %>
-	<%= @picture.description %>
-	<%= @picture.user.name %>
-	<%= image_tag(@picture.image_url, :width => 200) if @picture.image.present? %>
-	<% if signed_in? %>
-		<% if current_user == @picture.user || current_user.administrator? %>
-			<%= link_to 'Bewerken', edit_picture_path(@picture) %> |
-		      <%= link_to 'Verwijderen', @picture, confirm: 'Weet je het zeker?', method: :delete %> |
-		      <%= link_to 'Terug', :back %>
-		<% end %>
-	<% end %>
+	<div id="show">
+		<% if signed_in? %>
+	    	<h3><%= @picture.title  %></h3>
+	      	<%= image_tag(@picture.image_url) if @picture.image.present? %>
+	      	<p>
+				<%= @picture.description %>
+				</br>
+				<%= @picture.user.name %>
+				</br>
+				<%= link_to 'Bewerken', edit_picture_path(@picture) %> |
+				<%= link_to 'Verwijderen', @picture, confirm: 'Weet je het zeker?', method: :delete %>
+			</p>
+	      <% end %>
+	    </div>
+	    </div>
+	</div>
+</div>
