Overhauling vote functionality

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1603,3 +1603,16 @@ div, input, textarea
   position: absolute
   bottom: 0
 
+.picture img
+  width: 300px
+
+.picture
+  width: 300px
+  float: left
+
+#container-art
+  td
+    width: 300px
+    text-align: center
+    h2
+      font-size: 30px
