--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1616,3 +1616,11 @@ div, input, textarea
     text-align: center
     h2
       font-size: 30px
+
+.votebutton
+  clear: both
+
+.votebutton input
+  width: 200px
+  height: 50px
+  font-size: 30px
